ags (2.2.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted sync counter by using conditional build

ags (2.2.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_main_loop_set_sync_tic() and ags_main_loop_get_sync_tic()

ags (2.2.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential dead-lock, it is some procedural code that makes paralellism work
	* reverted previous tree lock change

ags (2.2.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsAudioLoop and AgsGenericMainLoop to use :obj-mutex as tree lock

ags (2.2.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential dead-lock

gs (2.2.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_simple_file.c to apply logarithmic port fixup
	* improved developer's book
	* fixed spelling errors
	* fixed ags_functional_notation_editor_workflow_test_edit_all() in order to pass again

ags (2.2.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_thread_global_get_use_sync_counter() synchronize threads with reduced overhead
	* implemented ags_main_loop_sync_counter_inc()
	* implemented ags_main_loop_sync_counter_dec()
	* implemented ags_main_loop_sync_counter_test()
	* fixed memory-leak in ags_message_envelope_free()

ags (2.2.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved Lv2 program and preset logarithmic conversion

ags (2.2.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsEffectBulk and AgsBulkMember to support logarithmic ports
	* improved AgsLine, AgsEffectLine and AgsLineMember to support logarithmic ports
	* improved AgsAutomationArea to support logarithmic ports
	* improved AgsLine to properly support GtkRange and GtkSpinButton
	* fixed synced Lv2ui controls

ags (2.2.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]